tdf#96922 Suppress EditView PageVisuailsation in GraphicExporter

PageBackground is due to old constraints in exporters not completely
hindered when IsPageVisible() is already set for signalling that
all EditView-specific Page visualisations should be suppressed.
As long as these exporters are not adapted, use the setting of
SetPagePaintingAllowed() which consequently achieves this.

Change-Id: I2222a799533f763b54b2210a46c24aa8ae92d7a2
Reviewed-on: https://gerrit.libreoffice.org/22837
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit f3ff67d3c3047de3ad43f8bb3f805d82eaef0479)
Signed-off-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 79288ac239ebf1916ffbf3c386482d00e6060f8d)